dropdown menu overflow fix

--- a/styles/NavBar.module.scss
+++ b/styles/NavBar.module.scss
@@ -49,6 +49,8 @@
     background-color: rgb(10, 10, 10);
     overflow: hidden;
     font-size: 40px;
+    position: absolute;
+    z-index: 1000;
 
     .list {
         display: flex;
